alter project compass and libs

--- a/compass/source/core/_mixin.scss
+++ b/compass/source/core/_mixin.scss
@@ -17,3 +17,8 @@
 		sizingMethod="scale"
 	);
 }
+
+@mixin calc($property, $expression) {
+    #{$property}: -webkit-calc(#{$expression});
+    #{$property}: calc(#{$expression});
+}
