--- a/compass/source/views/home.scss
+++ b/compass/source/views/home.scss
@@ -1,6 +1,1 @@
-//@import "ceaser-easing/ceaser";
-//@import "layout/functions";
-//@import "layout/helpers";
-//@import "layout/fonts";
-//@import "layout/colors";
-//@import "layout/icon";
+@import "core/base";
