--- a/compass/source/core/_base.scss
+++ b/compass/source/core/_base.scss
@@ -1,10 +1,4 @@
-@import "compass";
-@import "compass/utilities/general/clearfix";
-@import "compass/typography/text/replacement";
-@import "compass/css3";
-@import "compass/reset";
-@import "ceaser-easing/ceaser";
 @import "core/colors";
+@import "core/variables";
 @import "core/mixin";
-@import "core/fonts";
 //@import "core/icon";
