--- a/compass/source/views/base.scss
+++ b/compass/source/views/base.scss
@@ -10,11 +10,6 @@
 *	CSS BASE
 */
 
-* {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
 body {
-	font-size: 12px;
+	font-size: $fz-default;
 }
