--- a/compass/source/main.scss
+++ b/compass/source/main.scss
@@ -1,6 +1,9 @@
+// Compass
 @import "compass";
+
+// Components
 @import "compass/reset";
-@import "compass/css3";
 @import "ceaser-easing/ceaser";
 @import "core/fonts";
 @import "core/utils";
+@import "core/mixins";
