--- a/compass/source/core/_base.scss
+++ b/compass/source/core/_base.scss
@@ -1,3 +1,6 @@
+@import "compass";
+@import "compass/css3";
+@import "ceaser-easing/ceaser";
 @import "core/colors";
 @import "core/variables";
 @import "core/mixin";
