--- a/compass/source/views/base.scss
+++ b/compass/source/views/base.scss
@@ -1,7 +1,6 @@
 /*
-*	HTML5 Boilerplate using Compass/SASS
-*	Author: Hebert SIlva
-*	Contact: hebertsilva.com
+*	Default styles
+*	Default generic
 */
 
 @import "core/base";
