--- a/compass/source/views/base.scss
+++ b/compass/source/views/base.scss
@@ -9,6 +9,9 @@
 *	CSS BASE
 */
 
+* { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
+
 body {
+	@include font-01;
 	font-size: $fz-default;
 }
