--- a/compass/source/main.scss
+++ b/compass/source/main.scss
@@ -4,5 +4,10 @@
 
 @import "compass";
 @import "compass/reset";
+@import "core/variables";
+@import "core/colors";
+@import "core/mixin";
 @import "core/fonts";
 @import "core/utils";
+@import "core/icon";
+@import "core/_all_sprites";
