--- a/compass/source/core/_base.scss
+++ b/compass/source/core/_base.scss
@@ -1,5 +1,10 @@
+
+/*
+	## Base styles import
+*/
+
 @import "compass";
-@import "ceaser-easing/ceaser";
+@import "core/mixin";
 @import "core/colors";
 @import "core/variables";
-@import "core/mixin";
+@import "core/fonts";
