--- a/compass/source/core/_fonts.scss
+++ b/compass/source/core/_fonts.scss
@@ -1,6 +1,14 @@
+
 /*
-*	Fonts 
+	## Fonts imports
 */
 
-/* Font-01 - Open Sans */
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800);
+/*
+	## Open Sans
+*/
+
+@include make-font($font-1, "Open Sans", 300);
+@include make-font($font-1, "Open Sans", 400);
+@include make-font($font-1, "Open Sans", 600);
+@include make-font($font-1, "Open Sans", 700);
+@include make-font($font-1, "Open Sans", 800);
