--- a/compass/source/core/_variables.scss
+++ b/compass/source/core/_variables.scss
@@ -7,10 +7,12 @@
 	## Layout
 */
 
-$container: 960px;
-$break-point-large: 840px;
+$container: 1024px;
+$break-point-large: 960px;
 $break-point-medium: 768px;
-$break-point-small: 640px;
+$break-point-extra-medium: 680px;
+$break-point-small: 480px;
+
 
 /*
 	## Sprites setup
